# SVP-grounders

./: .gitignore  .gitmodules
Datasets/: dir_to_sql.py  grid_search.py  meta_postgres.sh  meta_runner.sh  run.sh
Datasets/Syntetic/: convert.py  create_dataset.py  create_rule.py  datasets.py  generate.py  rules.py  utils.py  weights.py
Datasets/Syntetic/doc/: Makefile  conf.py  index.rst  weights.rst
Datasets/syntetic/: convert.py  datasets.py  rules.py  utils.py  weights.py
Grounders/: install.sh
Grounders/bottomup/: CMakeLists.txt  grounder.cpp  grounder.h  main.cpp
Grounders/bottomup/logic/: constant.h  fact.h  parser.cpp  parser.h  predicate.h  rule.cpp  rule.h  substitution_set.h  substitution_set.inl  term.h  variable.h
Grounders/lparse/: patch.sh
Grounders/neurologic/: neurologic.properties  neurologic.xml
Grounders/neurologic/LRNN/src/main/java/extras/: BackpropGroundKappa.java  BackpropKappa.java  BatchLearner.java  Estimator.java  EvaluationInterface.java  FileToStringList.java  GraphViz.java  GroundInvalidatorOld.java  GroundKappaGetter.java  InactiveWeightBooster.java  RingsToxic.java  Rprop.java  (+3 more)
Grounders/neurologic/TreeLiker/examples_treeliker/mutagenesis/: muta.treeliker  muta_poly.treeliker  mutagenesis.txt
Grounders/neurologic/TreeLiker/examples_treeliker/peptides/: peptides.treeliker  peptides.txt  peptides_for_poly.txt  peptides_poly.treeliker
Grounders/neurologic/TreeLiker/examples_treeliker/predictive_toxicology/: ptc.treeliker  ptc_fm.txt  ptc_fr.txt  ptc_mm.txt  ptc_mr.txt
Tex/Report/: report.tex
Tex/Thesis/: thesis.tex
(+114 files in other folders)
